NetBSD Problem Report #44090

From rmind@NetBSD.org  Sat Nov 13 07:29:45 2010
Return-Path: <rmind@NetBSD.org>
Received: by www.NetBSD.org (Postfix, from userid 1391)
	id 99C1C63BACE; Sat, 13 Nov 2010 07:29:45 +0000 (UTC)
Message-Id: <20101113072945.99C1C63BACE@www.NetBSD.org>
Date: Sat, 13 Nov 2010 07:29:45 +0000 (UTC)
From: rmind@netbsd.org
Reply-To: rmind@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: proplib has a duplicate RB-tree implementation
X-Send-Pr-Version: 3.95

>Number:         44090
>Category:       lib
>Synopsis:       proplib has a duplicate RB-tree implementation
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    pgoyette
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Nov 13 07:30:00 +0000 2010
>Closed-Date:    Tue Jun 28 05:21:42 +0000 2016
>Last-Modified:  Tue Jun 28 05:21:42 +0000 2016
>Originator:     Mindaugas Rasiukevicius
>Release:        NetBSD 5.99.39
>Organization:
The NetBSD Project
>Environment:
>Description:
	- proplib(3) has a duplicate RB-tree implementation;
	- proplib's implementation and rbtree(3) are out of sync.
>How-To-Repeat:
	Code inspection.
>Fix:
	Remove prop_rb.c and always use rbtree(3).

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: lib-bug-people->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Tue, 28 Jun 2016 00:53:14 +0000
Responsible-Changed-Why:
I'll have a look at this.


From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44090 CVS commit: src/common/lib/libprop
Date: Tue, 28 Jun 2016 05:18:11 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Tue Jun 28 05:18:11 UTC 2016

 Modified Files:
 	src/common/lib/libprop: Makefile.inc prop_dictionary.c prop_number.c
 Removed Files:
 	src/common/lib/libprop: prop_rb.c prop_rb_impl.h

 Log Message:
 The local copy of rb_tree code has been unused for quite some time.  So
 we can just remove it, and adjust callers to use the "real" rbtree
 function names.

 Addresses PR lib/44090


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/common/lib/libprop/Makefile.inc
 cvs rdiff -u -r1.39 -r1.40 src/common/lib/libprop/prop_dictionary.c
 cvs rdiff -u -r1.27 -r1.28 src/common/lib/libprop/prop_number.c
 cvs rdiff -u -r1.10 -r0 src/common/lib/libprop/prop_rb.c
 cvs rdiff -u -r1.9 -r0 src/common/lib/libprop/prop_rb_impl.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Tue, 28 Jun 2016 05:21:42 +0000
State-Changed-Why:
Requested change was implemented.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.