The local copy of rb_tree code has been unused for quite some time.  So we can just remove it, and adjust callers to use the "real" rbtree function names.

Addresses PR lib/44090